--- a/MyWebApp/src/main/resources/application.properties
+++ b/MyWebApp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.mvc.view.prefix=/pages/
-spring.mvc.view.suffix=.html
+spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=DEBUG
 
